# phoscrosstalk

./: .gitignore  LICENSE  README.md  pyproject.toml  run_phoscrosstalk.slurm
.github/: AUDIT_REPORT.md
docs/: curated_data.md  input_data.md  phoscrosstalk.md  snapshot_preoptimization.md  useful_cli.md
phoscrosstalk/: __init__.py  analysis.py  app.py  config.py  core_mechanisms.py  data_curator.py  data_loader.py  debug_main.py  equations.py  fretchet.py  hyperparam.py  knockouts.py  logger.py  main.py  multistarts.py  optimization.py  post_processing.py  sensitivity.py  simulation.py  steadystate.py  weighting.py
phoscrosstalk/engines/: __init__.py  julia_backend.py
phoscrosstalk/engines/julia/src/: Dynamics.jl  Loss.jl  PhosBackend.jl  Solver.jl
scripts/: build_kinase_networks.py  build_site_level_ks_map.py  filter_data.py  fit_hpc.py  fit_kinase_protein.py  fit_network_protein.py  fit_network_protein_pymoo.py  fit_pymoo.py  harmonizomedownloader.py  make_kinase.py  plot_predictions.py  print_params.py
