[project]
name = "phoscrosstalk"
version = "0.1.0"
description = "Global phospho-crosstalk ODE modeling from PTM databases and time-series phosphorylation data."
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pymoo",
    "numba",
    "pynetphorest==0.1.3",
    "cobyqa>=1.1.3",
    "networkx>=3.4.2",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipython",
]

[project.urls]
homepage = "https://github.com/bibymaths/phoscrosstalk"
repository = "https://github.com/bibymaths/phoscrosstalk"
issues = "https://github.com/bibymaths/phoscrosstalk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
