[project]
name = "phoscrosstalk"
version = "0.1.0"
description = "Global phospho-crosstalk ODE modeling from PTM databases and time-series phosphorylation data."
authors = [
  { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  "numpy==2.2.2",
  "numba>=0.61.1",
  "pandas>=2.2,<2.3",
  "scipy>=1.12,<1.16",
  "matplotlib>=3.8",
  "seaborn>=0.13.2",
  "pymoo",
  "pynetphorest==0.1.3",
  "cobyqa>=1.1.3",
  "networkx>=3.4.2",
  "lxml>=6.0.2",
  "plotly>=6.5.2",
  "streamlit>=1.54.0",
  "gravis>=0.1.0",
  "juliacall>=0.9.31",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "ipython",
]

[project.scripts]
phoscrosstalk = "phoscrosstalk.main:cli"

[project.urls]
homepage = "https://github.com/bibymaths/phoscrosstalk"
repository = "https://github.com/bibymaths/phoscrosstalk"
issues = "https://github.com/bibymaths/phoscrosstalk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
